plattform/network_policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      {}
  ingress:
  - fromEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  egress:
  - toEntities:
    - cluster
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-default
spec:
  endpointSelector:
    matchLabels:
      {}
  egress:
  - toEntities:
    - kube-apiserver
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: TCP
      - port: "53"
        protocol: UDP
    ingress:
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubesystem
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      {}
  egress:
  - toEntities:
    - world
    - cluster
  ingress:
  - fromEntities:
    - cluster
---
